# Agricultural-Wage-Study

./: .gitignore  README.md  pyproject.toml
data/metadata/: agg_level_desc_values.json  commodity_desc__sector-CROPS__group-FIELD CROPS_values.json  commodity_desc_values.json  group_desc_values.json  sector_desc_values.json  source_desc_values.json  statisticcat_desc__sector_desc-CROPS__group_desc-FIELD_CROPS_values.json  statisticcat_desc_values.json  unit_desc__sector_desc-CROPS__group_desc-FIELD_CROPS_values.json  unit_desc_values.json  year_values.json
data/metadata/crop_unit_files/: CORN_unit_options.json  COTTON_unit_options.json  HAY_unit_options.json  OATS_unit_options.json  PEANUTS_unit_options.json  RICE_unit_options.json  SORGHUM_unit_options.json  SOYBEANS_unit_options.json  SUGARBEETS_unit_options.json  TOBACCO_unit_options.json  WHEAT_unit_options.json
data/metadata/unit_files/: collated_unit_metadata.csv
src/agwage/: __init__.py
src/agwage/data/: nass_loader.py  query_presets.py
src/agwage/utils/: __init__.py  api_tools.py  config.py  directories.py  env.py  nass_api_helpers.py
